...
            val radioStationsList = mutableListOf<RadioStation>().apply {
                var index = 0 // Initialize the order index

                add(RadioStation(0, "HOPE FM", "93.3", "NAIROBI", linksList.getOrNull(0) ?: "", false, false, index++))
                add(RadioStation(1, "SOUNDCITY RADIO", "88.5", "NAIROBI", linksList.getOrNull(1) ?: "", false, false, index++))
                add(RadioStation(2, "KISS FM", "100.3", "NAIROBI", linksList.getOrNull(2) ?: "", false, false, index++))
                add(RadioStation(228, "RADIO 47", "103.0", "NAIROBI", linksList.getOrNull(228) ?: "", false, false, index++))
                add(RadioStation(3, "NRG RADIO", "97.1", "NAIROBI", linksList.getOrNull(3) ?: "", false, false, index++))
                add(RadioStation(203, "RADIO CITIZEN", "106.7", "NAIROBI", linksList.getOrNull(203) ?: "", false, false, index++))
                add(RadioStation(4, "INOORO FM", "98.9", "NAIROBI", linksList.getOrNull(4) ?: "", false, false, index++))
//                 add(RadioStation(206,"NJATA FM","97.2","NAIROBI",linksFromTxt.getOrNull(206) ?: "", false, false, index++))
                add(RadioStation(5, "CHOICE RADIO", "87.7", "NAIROBI", linksList.getOrNull(5) ?: "", false, false, index++))
                add(RadioStation(6, "HOT 96", "96.0", "NAIROBI", linksList.getOrNull(6) ?: "", false, false, index++))
                add(RadioStation(7, "HOMEBOYS RADIO", "103.5", "NAIROBI", linksList.getOrNull(7) ?: "", false, false, index++))
                add(RadioStation(8, "CLASSIC 105", "105.2", "NAIROBI", linksList.getOrNull(8) ?: "", false, false, index++))
                add(RadioStation(9, "RADIO JAMBO", "97.5", "NAIROBI", linksList.getOrNull(9) ?: "", false, false, index++))
...
